# GastroLib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gastrolib/: __init__.py  data.py  ingredients.py  itemsets.py  network.py  nutrition.py  pairing.py  randomization.py  similarity.py  stats.py
notebooks/: demo.ipynb
