[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gastrolib"
version = "0.1.0"
description = "GastroLib: tools for computational gastronomy and cuisine analysis."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Manit Kaushik", email = "manit22277@iiitd.ac.in" },
  { name = "Nishchay Yadav", email = "nishchay22332@iiitd.ac.in" },
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "networkx>=3.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "scikit-learn>=1.3.0",
  "plotly>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["gastrolib*"]
exclude = ["notebooks*"]